--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 </head>
 <body>
 <div class="container">
-    <h1>Kolayaz 客户端下载</h1>
-    <div class="version" id="version">加载最新版本中...</div>
+    <h1>Kolayaz Client Agent</h1>
+    <div class="version" id="version">last version...</div>
 
-    <a href="#" id="btn-mac" class="btn btn-primary btn-download">下载 macOS</a>
-    <a href="#" id="btn-win" class="btn btn-success btn-download">下载 Windows</a>
-    <a href="#" id="btn-linux" class="btn btn-warning btn-download">下载 Linux</a>
+    <a href="#" id="btn-mac" class="btn btn-primary btn-download">Download macOS</a>
+    <a href="#" id="btn-win" class="btn btn-success btn-download">Download Windows</a>
+    <a href="#" id="btn-linux" class="btn btn-warning btn-download">Download Linux</a>
 </div>
 
 <footer>© 2025 Kolayaz</footer>
