--- a/index.html
+++ b/index.html
@@ -1,76 +1,158 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kolayaz 客户端下载</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>KolaYaz Client Download</title>
+    <link href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css" rel="stylesheet">
     <style>
         body {
-            background: #f5f6fa;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-        .container {
-            max-width: 600px;
-            margin-top: 80px;
-            background: #fff;
-            padding: 40px;
-            border-radius: 12px;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-        }
-        h1 {
-            font-weight: 700;
-            margin-bottom: 20px;
-            text-align: center;
+            line-height: 1.6;
             color: #333;
+            margin: 0;
+            padding: 0;
+            background-color: #f7f9fc;
         }
-        .version {
+
+        header {
+            background-color: #4CAF50;
+            color: white;
             text-align: center;
-            margin-bottom: 30px;
-            color: #555;
+            padding: 2rem 1rem;
         }
-        .btn-download {
-            width: 100%;
-            margin-bottom: 15px;
-            font-size: 1.1em;
+
+        header h1 {
+            margin: 0;
+            font-size: 2rem;
         }
+
+        header p {
+            font-size: 1.2rem;
+            margin-top: 0.5rem;
+        }
+
+        main {
+            max-width: 1000px;
+            margin: 2rem auto;
+            padding: 0 1rem;
+        }
+
+        .features {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 2rem;
+            margin-bottom: 3rem;
+        }
+
+        .feature {
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+            padding: 1.5rem;
+            transition: transform 0.2s;
+        }
+
+        .feature:hover {
+            transform: translateY(-5px);
+        }
+
+        .feature h3 {
+            color: #4CAF50;
+            margin-top: 0;
+        }
+
+        .download-section {
+            text-align: center;
+            margin-bottom: 3rem;
+        }
+
+        .download-btn {
+            display: inline-block;
+            padding: 1rem 2rem;
+            margin: 0.5rem;
+            background-color: #4CAF50;
+            color: white;
+            font-size: 1.1rem;
+            border-radius: 6px;
+            text-decoration: none;
+            transition: background-color 0.2s;
+        }
+
+        .download-btn:hover {
+            background-color: #45a049;
+        }
+
         footer {
             text-align: center;
-            margin-top: 50px;
-            color: #999;
+            padding: 2rem 1rem;
+            font-size: 0.9rem;
+            color: #777;
         }
     </style>
 </head>
 <body>
-<div class="container">
-    <h1>Kolayaz Client Agent</h1>
-    <div class="version" id="version">last version...</div>
 
-    <a href="#" id="btn-mac" class="btn btn-primary btn-download">Download macOS</a>
-    <a href="#" id="btn-win" class="btn btn-success btn-download">Download Windows</a>
-    <a href="#" id="btn-linux" class="btn btn-warning btn-download">Download Linux</a>
-</div>
+<header>
+    <h1>Why Choose KolaYaz</h1>
+    <p>Smart tech-driven shared printing platform, making printing simple and efficient</p>
+</header>
 
-<footer>© 2025 Kolayaz</footer>
+<main>
+    <div class="features">
+        <div class="feature">
+            <h3>Smart Location</h3>
+            <p>View nearby printers in real-time with accurate navigation, within 5 minutes walk</p>
+        </div>
+        <div class="feature">
+            <h3>Secure & Reliable</h3>
+            <p>Enterprise-grade encrypted transmission, automatic file destruction, protecting your privacy</p>
+        </div>
+        <div class="feature">
+            <h3>Instant Print</h3>
+            <p>Upload and print immediately, no waiting, supports multiple file formats</p>
+        </div>
+        <div class="feature">
+            <h3>Transparent Earnings</h3>
+            <p>Real-time earnings tracking, automatic monthly settlement on the 15th</p>
+        </div>
+        <div class="feature">
+            <h3>24/7 Service</h3>
+            <p>Round-the-clock device monitoring, automatic fault alerts, ensuring uninterrupted service</p>
+        </div>
+        <div class="feature">
+            <h3>IOT Connected</h3>
+            <p>Smart device management, remote printer monitoring, consumable reminders</p>
+        </div>
+    </div>
+
+    <div class="download-section">
+        <h2>Download KolaYaz Client</h2>
+        <p>Click your platform to download the latest version</p>
+        <a id="btn-darwin" class="download-btn" href="#" target="_blank">Download macOS</a>
+        <a id="btn-windows" class="download-btn" href="#" target="_blank">Download Windows</a>
+        <a id="btn-linux" class="download-btn" href="#" target="_blank">Download Linux</a>
+    </div>
+</main>
+
+<footer>
+    &copy; 2025 KolaYaz. All rights reserved.
+</footer>
 
 <script>
-    async function loadLatestVersion() {
-        try {
-            const res = await fetch('https://raw.githubusercontent.com/sulaymanyf/kolayaz_client/main/version.json', {cache: "no-store"});
-            const data = await res.json();
-
-            document.getElementById('version').textContent = `最新版本: ${data.version}`;
-
-            document.getElementById('btn-mac').href = data.urls.darwin;
-            document.getElementById('btn-win').href = data.urls.windows;
-            document.getElementById('btn-linux').href = data.urls.linux;
-        } catch (err) {
-            console.error('加载最新版本失败', err);
-            document.getElementById('version').textContent = '无法获取最新版本';
-        }
-    }
-
-    loadLatestVersion();
+    // 拉取最新 version.json
+    fetch('https://raw.githubusercontent.com/sulaymanyf/kolayaz_client/main/version.json')
+        .then(res => res.json())
+        .then(data => {
+            const urls = data.urls || {};
+            if(urls.darwin) document.getElementById('btn-darwin').href = urls.darwin;
+            if(urls.windows) document.getElementById('btn-windows').href = urls.windows;
+            if(urls.linux) document.getElementById('btn-linux').href = urls.linux;
+        })
+        .catch(err => {
+            console.error("Failed to load version.json:", err);
+        });
 </script>
+
 </body>
 </html>
